--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -20,7 +20,7 @@ p {
 }
 
 h1 {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
   font-size: 2.5rem;
 }
 
@@ -39,8 +39,59 @@ h1 {
   flex: 1;
 }
 
+.d-flex {
+  display: flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-left {
+  justify-content: left;
+}
+
+.justify-right {
+  justify-content: right;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.w-75 {
+  width: 75% !important;
+}
+
+.fw-image {
+  width: 100%;
+  object-fit: cover;
+}
+
+.fw-footer-image {
+  width: 100%;
+  object-fit: scale-down;
+}
+
+.image {
+  width: 100%;
+  height: 22rem;
+  object-fit: cover;
+}
+
+.profile-image {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 .col-6 {
   width: 49%;
+}
+
+.col-3 {
+  width: 33%;
 }
 
 .mb-2 {
@@ -53,6 +104,14 @@ h1 {
 
 .mt-4 {
   margin-top: 4rem;
+}
+
+.ml-4 {
+  margin-left: 4rem;
+}
+
+.p-4 {
+  padding: 4rem;
 }
 
 .pb-4 {
@@ -73,4 +132,8 @@ h1 {
 
 .m-0 {
   margin: 0;
+}
+
+.bg-dark {
+  background-color: #181818;
 }
