--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,14 +1,23 @@
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: grey;
+  filter: drop-shadow(0 0.5rem 0.5rem black);
+}
+
 .navbar {
   position: absolute;
-  margin-top: 30px;
-  padding: 30px;
-  font-size: 18px;
+  margin-top: 2rem;
+  padding: 2rem;
+  font-size: 1.2rem;
   width: 90%;
+  display: flex;
+  align-items: center;
   background-color: #181818;
   color: white;
   z-index: 100;
-  display: flex;
-  align-items: center;
 }
 .nav-item {
   margin-right: 3rem;
@@ -20,4 +29,23 @@
 .logo {
   width: 3rem;
   margin-right: 6rem;
+}
+
+@media only screen and (max-width: 1164px) {
+}
+
+@media only screen and (max-width: 790px) {
+  .navbar {
+    padding: 1.5rem;
+    font-size: 1rem;
+  }
+
+  .logo {
+    width: 2rem;
+    margin-right: 4rem;
+  }
+
+  .nav-item {
+    margin-right: 2rem;
+  }
 }
