--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -300,6 +300,11 @@ h3 {
 }
 
 @media only screen and (max-width: 790px) {
+  h1 {
+    margin-bottom: 1rem;
+    font-size: 2.2rem;
+  }
+
   .container-flex {
     width: 90%;
     margin-left: auto;
@@ -339,6 +344,14 @@ h3 {
 
   .p-sm-0 {
     padding: 0;
+  }
+
+  .p-sm-1 {
+    padding: 1rem;
+  }
+
+  .pb-sm-2 {
+    padding-bottom: 2rem;
   }
 
   .mb-sm-2 {
