--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,7 @@
 .about-us-text {
   font-size: 1.1rem;
   font-weight: 100;
-  height: 100%;
+  padding: 0;
 }
 
 .home {
@@ -12,7 +12,7 @@
 }
 
 .home-content {
-  padding: 40px;
+  padding: 2rem;
   background-color: grey;
   z-index: 12;
   width: 40rem;
@@ -25,4 +25,17 @@
   top: 0;
   min-width: 90%;
   object-fit: cover;
+}
+
+@media only screen and (max-width: 1164px) {
+}
+
+@media only screen and (max-width: 790px) {
+  .about-us-text {
+    font-size: 1rem;
+  }
+
+  .home-content {
+    padding: 1.5rem;
+  }
 }
