--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -7,13 +7,17 @@ a:hover {
   filter: drop-shadow(0 0.5rem 0.5rem black);
 }
 
+li {
+  padding: 0.5rem;
+}
+
 .navbar {
   position: absolute;
   margin-top: 2rem;
   padding: 2rem;
   font-size: 1.2rem;
   width: 90%;
-  display: flex;
+  display: block;
   align-items: center;
   background-color: #181818;
   color: white;
@@ -31,7 +35,7 @@ a:hover {
   margin-right: 6rem;
 }
 
-#grow {
+#expandableMenu {
   -moz-transition: height 0.5s;
   -ms-transition: height 0.5s;
   -o-transition: height 0.5s;
@@ -39,7 +43,6 @@ a:hover {
   transition: height 0.5s;
   height: 0;
   overflow: hidden;
-  z-index: 100;
 }
 
 @media only screen and (max-width: 1164px) {
