--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -198,6 +198,14 @@ h3 {
   margin-top: 4rem;
 }
 
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
 .ml-4 {
   margin-left: 4rem;
 }
@@ -236,6 +244,10 @@ h3 {
 
 .pl-1 {
   padding-left: 1rem;
+}
+
+.pt-1 {
+  padding-top: 1rem;
 }
 
 .m-0 {
