--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -234,8 +234,12 @@ h3 {
   padding: 4rem;
 }
 
-.p-2 {
+.p-3 {
   padding: 2rem;
+}
+
+.p-2 {
+  padding: 3rem;
 }
 
 .pb-4 {
@@ -244,6 +248,10 @@ h3 {
 
 .pb-2 {
   padding-bottom: 2rem;
+}
+
+.pb-1 {
+  padding-bottom: 1rem;
 }
 
 .pl-2 {
@@ -396,6 +404,10 @@ h3 {
 
   .pb-sm-2 {
     padding-bottom: 2rem;
+  }
+
+  .p-sm-3 {
+    padding: 3rem;
   }
 
   .mb-sm-2 {
