--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -120,6 +120,11 @@ h3 {
   display: flex;
 }
 
+.d-flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .justify-center {
   justify-content: center;
 }
