--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -53,16 +53,23 @@ li {
 h1 {
   margin-bottom: 1rem;
   font-size: 2.5rem;
+  font-weight: 500;
 }
 
 h2 {
   margin-bottom: 1rem;
   font-size: 2rem;
+  font-weight: 500;
 }
 
 h3 {
   margin-bottom: 1rem;
   font-size: 1.5rem;
+  font-weight: 500;
+}
+
+h4 {
+  font-weight: 500;
 }
 
 .container {
@@ -411,8 +418,20 @@ h3 {
     padding-bottom: 2rem;
   }
 
+  .pb-sm-0 {
+    padding-bottom: 0;
+  }
+
   .p-sm-3 {
     padding: 3rem;
+  }
+
+  .m-sm-0 {
+    margin: 0;
+  }
+
+  .m-sm-1 {
+    margin: 1rem;
   }
 
   .mb-sm-2 {
