--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -357,6 +357,10 @@ h4 {
   .mb-md-2 {
     margin-bottom: 2rem;
   }
+
+  .mr-md-2 {
+    margin-right: 2rem;
+  }
 }
 
 @media only screen and (max-width: 790px) {
