--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -28,14 +28,22 @@
 }
 
 .partner-image {
-  width: 15rem;
+  width: 8rem;
   margin: 1rem;
+}
+
+.logo__header {
+  width: 32rem;
 }
 
 @media only screen and (max-width: 1164px) {
   .partner-image {
-    width: 12rem;
-    margin: 1rem;
+    width: 6rem;
+    margin: 0.75rem;
+  }
+
+  .logo__header {
+    width: 28rem;
   }
 }
 
@@ -49,7 +57,11 @@
   }
 
   .partner-image {
-    width: 6rem;
-    margin: 0.7rem;
+    width: 4.5rem;
+    margin: 0.5rem;
+  }
+
+  .logo__header {
+    width: 18rem;
   }
 }
